read cron format
